--- a/internals/generators/container/actions.test.js.hbs
+++ b/internals/generators/container/actions.test.js.hbs
@@ -1,16 +1,16 @@
 import expect from 'expect';
 
-import * as Actions from '../actions';
-import * as Constants from '../constants';
+import * as actions from '../actions';
+import * as constants from '../constants';
 
 
 describe('{{ properCase name }} actions', () => {
   describe('Default Action', () => {
     it('has a type of DEFAULT_ACTION', () => {
       const expected = {
-        type: DEFAULT_ACTION,
+        type: constants.DEFAULT_ACTION,
       };
-      expect(defaultAction()).toEqual(expected);
+      expect(actions.defaultAction()).toEqual(expected);
     });
   });
 });
