--- a/app/components/Header/styles.css
+++ b/app/components/Header/styles.css
@@ -1,7 +1,7 @@
 .header {
   display: block;
   min-width: 1200px;
-  background-color: #00F;
+  background-color: #00f;
   padding: 2rem;
   margin: 0 auto 2rem;
 }
