--- a/app/components/Form/styles.css
+++ b/app/components/Form/styles.css
@@ -1,3 +1,5 @@
-.form { /* stylelint-ignore */
-
+.inputField { /* stylelint-ignore */
+  border: 1px solid #ccc;
+  outline: none;
+  padding: .25rem .5rem;
 }
