--- a/app/components/Header/styles.css
+++ b/app/components/Header/styles.css
@@ -1,7 +1,26 @@
-.header {
-  display: block;
+.headerContainer {
   min-width: 1200px;
-  background-color: #00f;
-  padding: 2rem;
-  margin: 0 auto 2rem;
+  margin-bottom: 2rem;
+}
+
+.header {
+  color: #7d8485;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.logo {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.link {
+  color: #7d8485;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.25rem;
+  font-weight: lighter;
+  padding: .75rem 1rem;
 }
