Implemented touched on inputs, improved styling, FormElements

--- a/app/components/Button/styles.css
+++ b/app/components/Button/styles.css
@@ -1,15 +1,17 @@
 :root {
-  --button-color: #ebebeb;
+  --button-color: #fff;
   --field-border: #ccc;
 }
 
 .button {
-  padding: .25rem .5rem;
+  padding: .4rem .5rem;
   border: 1px solid var(--field-border);
   background-color: var(--button-color);
   cursor: pointer;
+  margin: .5rem 0;
+  font-weight: lighter;
 }
 
 .button:hover {
-  background-color: color(var(--button-color) blackness(25%));
+  background-color: color(var(--button-color) blackness(1%));
 }
