--- a/app/containers/Form/styles.css
+++ b/app/containers/Form/styles.css
@@ -1,5 +1,10 @@
 .inputField { /* stylelint-ignore */
   border: 1px solid #ccc;
   outline: none;
-  padding: .25rem .5rem;
+  padding: .4rem .5rem;
+}
+
+/** Reset the ugly chrome yellow autofill color to white */
+.inputField:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
